feat: data loader and time step
feat: data loader and time step

--- a/notebooks/01_getting_started.ipynb
+++ b/notebooks/01_getting_started.ipynb
@@ -352,86 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hit_id</th>\n",
-       "      <th>ch0</th>\n",
-       "      <th>ch1</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>550</td>\n",
-       "      <td>0.019348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>549</td>\n",
-       "      <td>0.297097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>198</td>\n",
-       "      <td>692</td>\n",
-       "      <td>0.272943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>13</td>\n",
-       "      <td>607</td>\n",
-       "      <td>0.313376</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>175</td>\n",
-       "      <td>1049</td>\n",
-       "      <td>0.263074</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   hit_id  ch0   ch1     value\n",
-       "0       1  130   550  0.019348\n",
-       "1       1  130   549  0.297097\n",
-       "2       2  198   692  0.272943\n",
-       "3       3   13   607  0.313376\n",
-       "4       4  175  1049  0.263074"
+       "113998"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,123 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>particle_id</th>\n",
-       "      <th>vx</th>\n",
-       "      <th>vy</th>\n",
-       "      <th>vz</th>\n",
-       "      <th>px</th>\n",
-       "      <th>py</th>\n",
-       "      <th>pz</th>\n",
-       "      <th>q</th>\n",
-       "      <th>nhits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4503737066323968</td>\n",
-       "      <td>-0.009604</td>\n",
-       "      <td>0.008012</td>\n",
-       "      <td>-2.28776</td>\n",
-       "      <td>-6.774670</td>\n",
-       "      <td>10.634500</td>\n",
-       "      <td>18.471399</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4503805785800704</td>\n",
-       "      <td>-0.009604</td>\n",
-       "      <td>0.008012</td>\n",
-       "      <td>-2.28776</td>\n",
-       "      <td>-2.867750</td>\n",
-       "      <td>2.576280</td>\n",
-       "      <td>4.011590</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4503874505277440</td>\n",
-       "      <td>-0.009604</td>\n",
-       "      <td>0.008012</td>\n",
-       "      <td>-2.28776</td>\n",
-       "      <td>-24.148399</td>\n",
-       "      <td>61.841000</td>\n",
-       "      <td>96.351799</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4503943224754176</td>\n",
-       "      <td>-0.009604</td>\n",
-       "      <td>0.008012</td>\n",
-       "      <td>-2.28776</td>\n",
-       "      <td>-0.370760</td>\n",
-       "      <td>-0.137155</td>\n",
-       "      <td>0.500570</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4504011944230912</td>\n",
-       "      <td>-0.009604</td>\n",
-       "      <td>0.008012</td>\n",
-       "      <td>-2.28776</td>\n",
-       "      <td>-0.963170</td>\n",
-       "      <td>-0.581280</td>\n",
-       "      <td>3.710650</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        particle_id        vx        vy       vz         px         py  \\\n",
-       "0  4503737066323968 -0.009604  0.008012 -2.28776  -6.774670  10.634500   \n",
-       "1  4503805785800704 -0.009604  0.008012 -2.28776  -2.867750   2.576280   \n",
-       "2  4503874505277440 -0.009604  0.008012 -2.28776 -24.148399  61.841000   \n",
-       "3  4503943224754176 -0.009604  0.008012 -2.28776  -0.370760  -0.137155   \n",
-       "4  4504011944230912 -0.009604  0.008012 -2.28776  -0.963170  -0.581280   \n",
-       "\n",
-       "          pz  q  nhits  \n",
-       "0  18.471399  1      9  \n",
-       "1   4.011590 -1     14  \n",
-       "2  96.351799  1     12  \n",
-       "3   0.500570  1      6  \n",
-       "4   3.710650 -1     12  "
+       "11182"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -686,13 +509,140 @@
        "4 -0.016784  -4.90527  0.000006  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "truth.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hit_id</th>\n",
+       "      <th>particle_id</th>\n",
+       "      <th>tx</th>\n",
+       "      <th>ty</th>\n",
+       "      <th>tz</th>\n",
+       "      <th>tpx</th>\n",
+       "      <th>tpy</th>\n",
+       "      <th>tpz</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-137.712006</td>\n",
+       "      <td>-11.992200</td>\n",
+       "      <td>-1502.0</td>\n",
+       "      <td>-501522.0</td>\n",
+       "      <td>343519.000000</td>\n",
+       "      <td>-794022.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-119.614998</td>\n",
+       "      <td>-5.940190</td>\n",
+       "      <td>-1502.0</td>\n",
+       "      <td>259134.0</td>\n",
+       "      <td>-78586.296875</td>\n",
+       "      <td>-962639.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-170.955002</td>\n",
+       "      <td>-26.934500</td>\n",
+       "      <td>-1498.0</td>\n",
+       "      <td>-111174.0</td>\n",
+       "      <td>12683.299805</td>\n",
+       "      <td>-993720.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-123.581001</td>\n",
+       "      <td>-32.425701</td>\n",
+       "      <td>-1502.0</td>\n",
+       "      <td>-598942.0</td>\n",
+       "      <td>-452079.000000</td>\n",
+       "      <td>-660979.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-135.516006</td>\n",
+       "      <td>-40.429401</td>\n",
+       "      <td>-1502.0</td>\n",
+       "      <td>140122.0</td>\n",
+       "      <td>207332.000000</td>\n",
+       "      <td>-968183.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    hit_id  particle_id          tx         ty      tz       tpx  \\\n",
+       "23      24            0 -137.712006 -11.992200 -1502.0 -501522.0   \n",
+       "24      25            0 -119.614998  -5.940190 -1502.0  259134.0   \n",
+       "27      28            0 -170.955002 -26.934500 -1498.0 -111174.0   \n",
+       "60      61            0 -123.581001 -32.425701 -1502.0 -598942.0   \n",
+       "65      66            0 -135.516006 -40.429401 -1502.0  140122.0   \n",
+       "\n",
+       "              tpy       tpz  weight  \n",
+       "23  343519.000000 -794022.0     0.0  \n",
+       "24  -78586.296875 -962639.0     0.0  \n",
+       "27   12683.299805 -993720.0     0.0  \n",
+       "60 -452079.000000 -660979.0     0.0  \n",
+       "65  207332.000000 -968183.0     0.0  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truth[truth.particle_id == 0].head()"
    ]
   },
   {
@@ -965,37 +915,6 @@
     "\n",
     "# Step 4: Apply the function to create the vlt column\n",
     "hits['vlt'] = hits.apply(map_vlt, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        volume_id  layer_id\n",
-      "112645         18         8\n",
-      "112646         18         8\n",
-      "112647         18         8\n",
-      "112648         18         8\n",
-      "112649         18         8\n",
-      "...           ...       ...\n",
-      "113054         18         8\n",
-      "113055         18         8\n",
-      "113056         18         8\n",
-      "113057         18         8\n",
-      "113058         18         8\n",
-      "\n",
-      "[414 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# get the volume_id and layer_id of t=37\n",
-    "print(hits[hits['t'] == 44][['volume_id', 'layer_id']])"
    ]
   },
   {
