feat: full dummy pipeline
refactor: equidistant --> adjusting

feat: interface for pairing strategy

feat: greedy pairing strategy

tmp

feat: support for cylindrical coordinates

fix: pair indexing for loss calculation

wip: repeated-kd-tree strategy

feat: kd-tree strategy

dev: gitlab issue / mr templates

--- a/notebooks/01_getting_started.ipynb
+++ b/notebooks/01_getting_started.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/pelokbal/.kaggle/kaggle.json'\n",
       "train_sample.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
      ]
     }
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +340,7 @@
        "4       5 -88.326202 -13.04520 -1502.5          7         2          1"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,16 +351,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hit_id</th>\n",
+       "      <th>ch0</th>\n",
+       "      <th>ch1</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>550</td>\n",
+       "      <td>0.019348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>549</td>\n",
+       "      <td>0.297097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>198</td>\n",
+       "      <td>692</td>\n",
+       "      <td>0.272943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>607</td>\n",
+       "      <td>0.313376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>175</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>0.263074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "113998"
+       "   hit_id  ch0   ch1     value\n",
+       "0       1  130   550  0.019348\n",
+       "1       1  130   549  0.297097\n",
+       "2       2  198   692  0.272943\n",
+       "3       3   13   607  0.313376\n",
+       "4       4  175  1049  0.263074"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,16 +442,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>particle_id</th>\n",
+       "      <th>vx</th>\n",
+       "      <th>vy</th>\n",
+       "      <th>vz</th>\n",
+       "      <th>px</th>\n",
+       "      <th>py</th>\n",
+       "      <th>pz</th>\n",
+       "      <th>q</th>\n",
+       "      <th>nhits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4503737066323968</td>\n",
+       "      <td>-0.009604</td>\n",
+       "      <td>0.008012</td>\n",
+       "      <td>-2.28776</td>\n",
+       "      <td>-6.774670</td>\n",
+       "      <td>10.634500</td>\n",
+       "      <td>18.471399</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4503805785800704</td>\n",
+       "      <td>-0.009604</td>\n",
+       "      <td>0.008012</td>\n",
+       "      <td>-2.28776</td>\n",
+       "      <td>-2.867750</td>\n",
+       "      <td>2.576280</td>\n",
+       "      <td>4.011590</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4503874505277440</td>\n",
+       "      <td>-0.009604</td>\n",
+       "      <td>0.008012</td>\n",
+       "      <td>-2.28776</td>\n",
+       "      <td>-24.148399</td>\n",
+       "      <td>61.841000</td>\n",
+       "      <td>96.351799</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4503943224754176</td>\n",
+       "      <td>-0.009604</td>\n",
+       "      <td>0.008012</td>\n",
+       "      <td>-2.28776</td>\n",
+       "      <td>-0.370760</td>\n",
+       "      <td>-0.137155</td>\n",
+       "      <td>0.500570</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4504011944230912</td>\n",
+       "      <td>-0.009604</td>\n",
+       "      <td>0.008012</td>\n",
+       "      <td>-2.28776</td>\n",
+       "      <td>-0.963170</td>\n",
+       "      <td>-0.581280</td>\n",
+       "      <td>3.710650</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "11182"
+       "        particle_id        vx        vy       vz         px         py  \\\n",
+       "0  4503737066323968 -0.009604  0.008012 -2.28776  -6.774670  10.634500   \n",
+       "1  4503805785800704 -0.009604  0.008012 -2.28776  -2.867750   2.576280   \n",
+       "2  4503874505277440 -0.009604  0.008012 -2.28776 -24.148399  61.841000   \n",
+       "3  4503943224754176 -0.009604  0.008012 -2.28776  -0.370760  -0.137155   \n",
+       "4  4504011944230912 -0.009604  0.008012 -2.28776  -0.963170  -0.581280   \n",
+       "\n",
+       "          pz  q  nhits  \n",
+       "0  18.471399  1      9  \n",
+       "1   4.011590 -1     14  \n",
+       "2  96.351799  1     12  \n",
+       "3   0.500570  1      6  \n",
+       "4   3.710650 -1     12  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +685,7 @@
        "4 -0.016784  -4.90527  0.000006  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +812,7 @@
        "65  207332.000000 -968183.0     0.0  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1305,7 @@
        "max        48.000000       9.000000       7.000000  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,13 +1550,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "070c8ddfd64141cbbceb1fce8b4d6af2",
+       "model_id": "9712d5389238473ba05f3c374d85fca4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1394,7 +1570,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea7aba3ceef94beca36c7ae8c9db52f9",
+       "model_id": "5fac680886a44b27b03f305fbe5d4b80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1414,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,13 +1599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bb66ed03dcb4430a466e4055c88ec84",
+       "model_id": "db7fa029df594284958feb324463e2b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1443,7 +1619,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cc97910dd81459dbefa5f520cd10319",
+       "model_id": "dc261bb2c6a049f3a2d81af0c5546000",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1462,7 +1638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
