--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_30937/2466644422.py:24: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_18613/393930041.py:24: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n"
      ]
     }
@@ -120,10 +120,10 @@
     "# Add the parent directory to the Python path\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
-    "from src.TimeStep.ForEquidistant.PlacementStrategy import SqueezedSinusoidStrategy\n",
-    "from src.TimeStep.ForEquidistant.VolumeLayer import VLTimeStep\n",
+    "from src.TimeStep.ForAdjusting.PlacementStrategy import SqueezedSinusoidStrategy\n",
+    "from src.TimeStep.ForAdjusting.VolumeLayer import VLTimeStep\n",
     "\n",
-    "strategy = SqueezedSinusoidStrategy(step_size_multiplier=325.1236)\n",
+    "strategy = SqueezedSinusoidStrategy(step_size_multiplier=2)\n",
     "time_step = VLTimeStep(placement_strategy=strategy)\n",
     "\n",
     "hits_df = pd.DataFrame(columns=[\"x\", \"y\", \"z\", \"t\"])\n",
@@ -131,7 +131,7 @@
     "sizes = torch.randint(low=1000, high=2000, size=(num_t,), dtype=torch.int32)\n",
     "\n",
     "for t in range(num_t):\n",
-    "    hits_t = time_step.place_equidistant_hits(t, sizes[t:t+1])\n",
+    "    hits_t = time_step.place_hits(t, sizes[t:t+1])\n",
     "    hits_df_new = pd.DataFrame(hits_t.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
     "    hits_df_new[\"t\"] = t\n",
     "    hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
@@ -140,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "488325ffa6a34310a21fb4c01f73214a",
+       "model_id": "bc3839c3b27745e6bf17b8627a60927a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b367a6dfb64249b2abaeadf18ac84ca7",
+       "model_id": "c74975b9c1be447ca1af9a5fd6cf6b06",
        "version_major": 2,
        "version_minor": 0
       },
