--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -98,40 +98,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_18613/393930041.py:24: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_92643/433270270.py:25: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n"
      ]
     }
    ],
    "source": [
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
+    "\n",
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
+    "from src.Util import CoordinateSystemEnum\n",
     "import torch\n",
     "from torch import Tensor\n",
     "\n",
     "# Add the parent directory to the Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "\n",
     "from src.TimeStep.ForAdjusting.PlacementStrategy import SqueezedSinusoidStrategy\n",
     "from src.TimeStep.ForAdjusting.VolumeLayer import VLTimeStep\n",
     "\n",
-    "strategy = SqueezedSinusoidStrategy(step_size_multiplier=2)\n",
+    "strategy = SqueezedSinusoidStrategy(step_size_multiplier=2011.187)\n",
     "time_step = VLTimeStep(placement_strategy=strategy)\n",
     "\n",
     "hits_df = pd.DataFrame(columns=[\"x\", \"y\", \"z\", \"t\"])\n",
     "num_t = time_step.get_num_time_steps()\n",
-    "sizes = torch.randint(low=1000, high=2000, size=(num_t,), dtype=torch.int32)\n",
+    "sizes = torch.randint(low=10000, high=20000, size=(num_t,), dtype=torch.int32)\n",
     "\n",
     "for t in range(num_t):\n",
-    "    hits_t = time_step.place_hits(t, sizes[t:t+1])\n",
+    "    hits_t = time_step.place_hits(t, sizes[t:t+1], coordinate_system=CoordinateSystemEnum.CARTESIAN)\n",
     "    hits_df_new = pd.DataFrame(hits_t.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
     "    hits_df_new[\"t\"] = t\n",
     "    hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
@@ -140,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc3839c3b27745e6bf17b8627a60927a",
+       "model_id": "91e9b0b900044f3da844cfb463ca5290",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c74975b9c1be447ca1af9a5fd6cf6b06",
+       "model_id": "0742b81867dc48f69614c8670929f396",
        "version_major": 2,
        "version_minor": 0
       },
