fix: placement and pairing strategy issues
fix: vl maps and placement strategy

kd-tree hyperparameter tuning

--- a/notebooks/plot_hits.ipynb
+++ b/notebooks/plot_hits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,70 +89,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Squeezed Sinusoid Strategy\n",
+    "## Sinusoid Strategy\n",
     "\n",
-    "Th cell below creates points with teh squeezed sinusoid strategy. Try using different values for `step_size_multiplier`. Note the following:\n",
+    "Th cell below creates points with the sinusoid strategy. Try using different values for `step_size_multiplier`. Note the following:\n",
     "1. Values below 2 are not a good choice because the generated values will not cover the full circle\n",
     "2. Even values are not a good choice because they will repeat the points after every rotation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_92643/433270270.py:25: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n"
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_17883/4025609258.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
+      "/var/folders/w0/2rh4b4h16zdgh0jjh4zcw_vr0000gn/T/ipykernel_17883/4025609258.py:63: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  gt_hits_df = pd.concat([gt_hits_df, gt_hits_df_new], ignore_index=True)\n"
      ]
     }
    ],
    "source": [
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "\n",
-    "import os\n",
     "import sys\n",
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
-    "from src.Util import CoordinateSystemEnum\n",
     "import torch\n",
     "from torch import Tensor\n",
+    "from torch.nn import functional as F\n",
     "\n",
     "# Add the parent directory to the Python path\n",
-    "from src.TimeStep.ForAdjusting.PlacementStrategy import SqueezedSinusoidStrategy\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
+    "\n",
+    "from src.Util.Globals import DATA_DIR\n",
+    "from src.Util import CoordinateSystemEnum\n",
+    "from src.Data.CollisionEventLoader import CollisionEventLoader\n",
+    "from src.TimeStep.ForAdjusting.PlacementStrategy import SinusoidStrategy\n",
     "from src.TimeStep.ForAdjusting.VolumeLayer import VLTimeStep\n",
     "\n",
-    "strategy = SqueezedSinusoidStrategy(step_size_multiplier=2011.187)\n",
-    "time_step = VLTimeStep(placement_strategy=strategy)\n",
+    "normalize_hits = False\n",
+    "strategy = SinusoidStrategy(step_size_multiplier=13.87193)\n",
+    "time_step = VLTimeStep(placement_strategy=strategy, normalize_hits=normalize_hits)\n",
+    "\n",
+    "root_dir = os.path.dirname(os.path.abspath(os.getcwd()))\n",
+    "coordinate_system = CoordinateSystemEnum.CARTESIAN\n",
+    "data_loader = CollisionEventLoader(\n",
+    "    os.path.join(root_dir, DATA_DIR, \"train_sample\"),\n",
+    "    time_step,\n",
+    "    batch_size=1,\n",
+    "    coordinate_system=coordinate_system,\n",
+    "    normalize_hits=normalize_hits,\n",
+    "    device=\"cpu\",\n",
+    ")\n",
     "\n",
     "hits_df = pd.DataFrame(columns=[\"x\", \"y\", \"z\", \"t\"])\n",
+    "gt_hits_df = pd.DataFrame(columns=[\"x\", \"y\", \"z\", \"t\"])\n",
+    "\n",
     "num_t = time_step.get_num_time_steps()\n",
-    "sizes = torch.randint(low=10000, high=20000, size=(num_t,), dtype=torch.int32)\n",
+    "gt_hits_list, gt_batch_index, _ = next(iter(data_loader))\n",
     "\n",
     "for t in range(num_t):\n",
-    "    hits_t = time_step.place_hits(t, sizes[t:t+1], coordinate_system=CoordinateSystemEnum.CARTESIAN)\n",
+    "    gt_hits = gt_hits_list[t]\n",
+    "    gt_index = gt_batch_index[t]\n",
+    "\n",
+    "    part_ids = time_step.assign_to_shell_parts(gt_hits, t, coordinate_system)\n",
+    "    num_parts = time_step.get_num_shell_parts(t)\n",
+    "    batch_size = data_loader.batch_size\n",
+    "\n",
+    "    batch_part_ids = gt_index * num_parts + part_ids\n",
+    "    _, gt_size = torch.unique(batch_part_ids, return_counts=True)\n",
+    "\n",
+    "    gt_size = F.pad(gt_size, (0, num_parts * batch_size - gt_size.size(0)), value=0)\n",
+    "    gt_size = gt_size.view(batch_size, num_parts)\n",
+    "\n",
+    "    hits_t = time_step.place_hits(\n",
+    "        t, gt_size, coordinate_system=CoordinateSystemEnum.CARTESIAN\n",
+    "    )\n",
+    "\n",
     "    hits_df_new = pd.DataFrame(hits_t.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
     "    hits_df_new[\"t\"] = t\n",
     "    hits_df = pd.concat([hits_df, hits_df_new], ignore_index=True)\n",
-    "    "
+    "\n",
+    "    gt_hits_df_new = pd.DataFrame(gt_hits.cpu().numpy(), columns=[\"x\", \"y\", \"z\"])\n",
+    "    gt_hits_df_new[\"t\"] = t\n",
+    "    gt_hits_df = pd.concat([gt_hits_df, gt_hits_df_new], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91e9b0b900044f3da844cfb463ca5290",
+       "model_id": "76054503236542b788a5f5d691f91e5a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(0.0, 7.0), description='t range:', max=7.0, step=1.0)"
+       "FloatRangeSlider(value=(0.0, 15.0), description='t range:', max=15.0, step=1.0)"
       ]
      },
      "metadata": {},
@@ -161,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0742b81867dc48f69614c8670929f396",
+       "model_id": "fcfa259191394f75a764e3ab4f5be48e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +213,15 @@
     }
    ],
    "source": [
-    "create_3d_hit_plot(hits_df, color_col = \"t\")"
+    "s_hits_df = hits_df.sample(frac=0.1)\n",
+    "s_gt_hits_df = gt_hits_df.sample(frac=0.1)\n",
+    "\n",
+    "s_hits_df[\"t\"] = s_hits_df[\"t\"] * 2\n",
+    "s_gt_hits_df[\"t\"] = s_gt_hits_df[\"t\"] * 2 + 1\n",
+    "\n",
+    "combined_df = pd.concat([s_hits_df, s_gt_hits_df], ignore_index=True)\n",
+    "\n",
+    "create_3d_hit_plot(combined_df, color_col = \"t\")"
    ]
   }
  ],
